Upgrade document
